--- a/templates/User/signIn.html.twig
+++ b/templates/User/signIn.html.twig
@@ -1,3 +1,47 @@
 <div>
-    {{ form(productForm) }}
+    {{ form_start(userForm) }}
+
+        <div>
+            {{ form_label(userForm.pseudo) }}
+            {{ form_widget(userForm.pseudo) }}
+            {{ form_errors(userForm.pseudo) }}
+        </div>
+
+        <div>
+                {{ form_label(userForm.prenom) }}
+                {{ form_widget(userForm.prenom) }}
+                {{ form_errors(userForm.prenom) }}
+        </div>
+
+        <div>
+                {{ form_label(userForm.nom) }}
+                {{ form_widget(userForm.nom) }}
+                {{ form_errors(userForm.nom) }}
+        </div>
+
+        <div>
+                {{ form_label(userForm.telephone) }}
+                {{ form_widget(userForm.telephone) }}
+                {{ form_errors(userForm.telephone) }}
+        </div>
+
+        <div>
+                {{ form_label(userForm.mail) }}
+                {{ form_widget(userForm.mail) }}
+                {{ form_errors(userForm.mail) }}
+        </div>
+
+        <div>
+                {{ form_widget(userForm.password) }}
+                {{ form_errors(userForm.password) }}
+        </div>
+
+        <div>
+                {{ form_label(userForm.campus) }}
+                {{ form_widget(userForm.campus) }}
+                {{ form_errors(userForm.campus) }}
+        </div>
+        <button type="submit">S'inscrire</button>
+    {{ form_end(productForm, {'render_rest': false}) }}
+
 </div>
