Création page accueil 1.2

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,16 +2,28 @@ body {
     background-color: lightblue;
 }
 
+
+header {
+    display: flex;
+    height: 100px;
+    align-items: center;
+
+}
+
 nav {
     align-items: center;
     justify-items: center;
     background-color: gainsboro;
 }
 
-header {
+footer {
     display: flex;
-    height: 100px;
     align-items: center;
+    justify-content: center;
+    width: 100%;
+    bottom: 0;
+    background-color: gainsboro;
+    height: 70px;
 }
 
 
