--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -18,9 +18,12 @@
     </div>
 </header>
 {% include ('inc/nav.html.twig') %}
-
-
-{% block body %}{% endblock %}
+<main>
+    {% block main %}{% endblock %}
+</main>
+<footer>
+    <h6>&copy;{{ "now" | date("Y") }}  sortir.com</h6>
+</footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
