rajout de petit message flash lors de l'inscription

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -18,6 +18,14 @@
     </div>
 </header>
 
+{% for label, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="flash flash-{{ label }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
+
 {% include ('inc/nav.html.twig') %}
 <main>
     {% block main %}{% endblock %}
