--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,12 +11,13 @@ header {
 }
 
 nav {
-    align-items: center;
-    justify-items: center;
     background-color: gainsboro;
 }
 
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
