--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -4,6 +4,7 @@
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-center"></span>
     </button>
+    <a class="navbar-brand">Bienvenue {{ app.token.username }}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
