commit formulaire de création de sortie

--- a/templates/sortie/createSortie.html.twig
+++ b/templates/sortie/createSortie.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Publiez vos évènements{% endblock %}
 
-{% block body %}
+{% block main %}
     <h1>Ajouter un évènement</h1>
 <div>
     {{ form_start(sortieForm) }}
