--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,11 +1,11 @@
-{% extends 'main/index.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Connexion!{% endblock %}
+{% block title %}Connexion{% endblock %}
 
-{% block body %}
+{% block main %}
 <form method="post">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>.
     {% endif %}
 
     {% if app.user %}
