Affichage de la page du profil d'UN utilisateur :bowtie:

--- a/templates/User/profil.html.twig
+++ b/templates/User/profil.html.twig
@@ -29,7 +29,7 @@
     </div>
 
     <div>
-        <a class="btn btn-primary" href="{% url('home') %}">Retour</a>
+        <a class="btn btn-primary" href="{{ url('home') }}">Retour</a>
     </div>
 
 {% endblock %}
