--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -32,7 +32,7 @@
         {% block main %}{% endblock %}
     </div>
 </main>
-<footer class="position-relative">
+<footer>
     <h6>&copy;{{ "now" | date("Y") }} sortir.com</h6>
 </footer>
 </body>
