--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,7 +34,7 @@
 
         <div class="checkbox mb-3">
             <label for="remember_me">
-                <input type="checkbox" id ="remember_me" name="_remember_me">
+                <input type="checkbox" id ="remember_me" name="_remember_me" checked>
                 Se souvenir de moi
             </label>
         </div>
