--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light">
+
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-center"></span>
     </button>
-    <a class="navbar-brand">Bienvenue {{ app.token.username }}</a>
+
+    <a>Bienvenue {{ app.user.prenom }}<br>
+        Nous sommes le {{ ("now" | date("d/m/y"))}}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" style="padding-left: 50px" >
             <li class="nav-item">
                 <a class="nav-link" href="#">Villes</a>
             </li>
