--- a/templates/sortie/createSortie.html.twig
+++ b/templates/sortie/createSortie.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Publiez vos évènements{% endblock %}
+{% block title %}Publiez vos sorties{% endblock %}
 
 {% block main %}
-    <h1>Ajouter un évènement</h1>
+    <h1>Ajouter une sortie</h1>
 <div>
     {{ form_start(sortieForm) }}
     <div>
