--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -25,8 +25,9 @@
         </div>
     {% endfor %}
 {% endfor %}
-
+{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
 {% include ('inc/nav.html.twig') %}
+{% endif %}
 <main>
     <div class="container">
         {% block main %}{% endblock %}
