Modification du profil en cours de construction :bowtie:

--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -35,9 +35,8 @@
         </div>
 
         <div>
-            {{ form_label(userForm.password.first) }}
-            {{ form_widget(userForm.password.first) }}
-            {{ form_errors(userForm.password.first) }}
+            {{ form_widget(userForm.password) }}
+            {{ form_errors(userForm.password) }}
         </div>
 
         <div>
