--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href={{ asset ("css/bootstrap.css") }}>
     <link rel="stylesheet" href={{ asset ("css/app.css") }}>
+    <link rel="icon" href="img/sortir.png">
 </head>
 <body>
 <header>
