--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -46,8 +46,9 @@
         </div>
 
         {{ form_row(userForm._token) }}
-        <button type="submit">Modifier</button>
+        <button class="btn btn-primary" type="submit">Modifier</button><a class="btn btn-dark" href="{{ path('home') }}">Retour</a>
         {{ form_end(userForm, {'render_rest': false}) }}
+
 
     </div>
 {% endblock %}
