--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -36,12 +36,42 @@
         </div>
     </div>
     <div class="text-right">
-    <input class="btn btn-primary" type="submit" value="Rechercher">
+        <input class="btn btn-primary" type="submit" value="Rechercher">
     </div>
     {{ form_end(findSortieForm) }}
-    <div>
-        {% for sortie in sorties %}
-            {{ sortie.nom }}
-        {% endfor %}
+    <br>
+    <div class="table-responsive pre-scrollable">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Nom de la sortie</th>
+                <th scope="col">Date de la sortie</th>
+                <th scope="col">Clôture</th>
+                <th scope="col">Inscrits/<br>places</th>
+                <th scope="col">Etat</th>
+                <th scope="col">Inscrit</th>
+                <th scope="col">Organisateur</th>
+                <th scope="col">Actions</th>
+            </tr>
+            </thead>
+
+            {% for sortie in sorties %}
+                <tr>
+                    <td>{{ sortie.nom }}</td>
+                    <td>{{ sortie.dateHeureDebut | date('d/m/y') }}</td>
+                    <td>{{ sortie.dateLimiteInscription | date('d/m/y') }}</td>
+                    <td class="text-center">{{ sortie.inscriptions | length }} /
+                        {{ sortie.nbInscriptionMax }}
+                    </td>
+                    <td>{{ sortie.etat.libelle }}</td>
+
+                    <td></td>
+                    <td>{{ sortie.organisateur.prenom }}
+                        {{ sortie.organisateur.nom | slice(0,1) }}.
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
     </div>
+    <br>
 {% endblock %}
