--- a/templates/sortie/createSortie.html.twig
+++ b/templates/sortie/createSortie.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
     <h1>Ajouter une sortie</h1>
-<div>
+<div class="col-12 row">
     {{ form_start(sortieForm) }}
     <div>
         {{ form_label(sortieForm.nom) }}
