--- a/templates/User/profil.html.twig
+++ b/templates/User/profil.html.twig
@@ -4,32 +4,41 @@
 
 {% block main %}
 
-    <div>
-        {{ user.pseudo }}
+    <div class="col-12 row">
+        <div class="col-2 align-self-center">
+            <img src="{{ asset('uploads/photo_profil/' ~ user.getUrlPhoto()) }}" width="150">
+        </div>
+        <div class="col-10">
+            <div>
+                {{ user.pseudo }}
+            </div>
+
+            <div>
+                Prénom  : {{ user.prenom }}
+            </div>
+
+            <div>
+                Nom  : {{ user.nom }}
+            </div>
+
+            <div>
+                Téléphone  : {% if user.telephone %} {{ user.telephone}} {% else %} Pas de numéro renseigné {% endif %}
+            </div>
+
+            <div>
+                Email  : {{ user.mail }}
+            </div>
+
+            <div>
+                Campus  : {{ user.campus }}
+            </div>
+
+            <div>
+                <a class="btn btn-primary" href="{{ url('home') }}">Retour</a>
+            </div>
+        </div>
     </div>
 
-    <div>
-        Prénom  : {{ user.prenom }}
-    </div>
 
-    <div>
-        Nom  : {{ user.nom }}
-    </div>
-
-    <div>
-        Téléphone  : {% if user.telephone %} {{ user.telephone}} {% else %} Pas de numéro renseigné {% endif %}
-    </div>
-
-    <div>
-        Email  : {{ user.mail }}
-    </div>
-
-    <div>
-        Campus  : {{ user.campus }}
-    </div>
-
-    <div>
-        <a class="btn btn-primary" href="{{ url('home') }}">Retour</a>
-    </div>
 
 {% endblock %}
