--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,6 +10,14 @@
         <div class="col-6">
             {{ form_widget(findSortieForm) }}
         </div>
+{#        <div class="form-group col-6">#}
+{#            <label for="campus">Campus :</label>#}
+{#            <select id="campus" name="campus" class="form-control">#}
+{#                {% for camp in campus %}#}
+{#                    <option>{{ camp.nom }}</option>#}
+{#                {% endfor %}#}
+{#            </select>#}
+{#        </div>#}
         <div class="form-group col-6">
             <label for="dateDebut">Entre le :</label>
             <input type="datetime-local" class="form-control"
