commit formulaire de création de sortie

--- a/templates/sortie/createSortie.html.twig
+++ b/templates/sortie/createSortie.html.twig
@@ -45,7 +45,7 @@
     <div>
         <select id="lieuE" name="lieuE">
             {% for lieu in lieuE %}
-            <option value="{{ lieu }}">{{ lieu }}</option>
+            <option class="lieu" value="{{ lieu }}" data-lieu="{{ lieu }}">{{ lieu }}</option>
             {% endfor %}
         </select>
         <a href="{{ path('sortie') }}" title="Ajouter un lieu"><img src="{{ asset('img/bouton_ajouter.png') }}" alt="Ajouter un lieu" class="bouton-plus" width="35px"></a>
@@ -53,10 +53,19 @@
 
     <div>
         <label>Rue : </label>
-            <input type="text"></input>
-
+            <input type="text">
     </div>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var userRating = document.querySelector('.lieu');
+            var lieu = userRating.dataset.lieu;
+            console.log(lieu)
+
+            // or with jQuery
+            //var isAuthenticated = $('.js-user-rating').data('isAuthenticated');
+        });
+    </script>
     {{ form_row(sortieForm._token) }}
     <button type="submit">Enregistrer</button>
     <button type="submit">Publier la sortie</button>
