ENFIN LA VILLE QUI S'AFFICHE POUR LE FORM DE CREATE SORTIE YOUPIIIII!!!

--- a/templates/sortie/createSortie.html.twig
+++ b/templates/sortie/createSortie.html.twig
@@ -43,6 +43,12 @@
     </div>
 
     <div>
+        {{ form_label(sortieForm.ville) }}
+        {{ form_widget(sortieForm.ville) }}
+        {{ form_errors(sortieForm.ville) }}
+    </div>
+
+    <div>
         <select id="lieuE" name="lieuE">
             {% for lieu in lieuE %}
             <option class="lieu" value="{{ lieu }}" data-lieu="{{ lieu }}">{{ lieu }}</option>
