--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,8 +6,17 @@
         <h3>Filtrer les sorties</h3>
         {{ form_start(findMesSortiesForm) }}
         <div class="form-row">
-            <div class="col">
-                {{ form_widget(findMesSortiesForm) }}
+            <div class="col-6">
+                {{ form_row(findMesSortiesForm.nomSortie) }}
+            </div>
+            <div class="col-6">
+                {{ form_row(findMesSortiesForm.nomCampus) }}
+            </div>
+            <div class="col-6">
+                {{ form_row(findMesSortiesForm.dateDebut) }}
+            </div>
+            <div class="col-6">
+                {{ form_row(findMesSortiesForm.dateFin) }}
             </div>
 
             <div class="col-6">
@@ -33,39 +42,43 @@
         </div>
         {{ form_end(findMesSortiesForm) }}
     </div>
-<div class="table-responsive pre-scrollable">
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th scope="col">Nom de la sortie</th>
-            <th scope="col">Date de la sortie</th>
-            <th scope="col">Clôture</th>
-            <th scope="col">Inscrits/<br>places</th>
-            <th scope="col">Etat</th>
-            <th scope="col">Inscrit</th>
-            <th scope="col">Organisateur</th>
-            <th scope="col">Actions</th>
-        </tr>
-        </thead>
-        {% for sortie in sorties %}
+    <div class="table-responsive pre-scrollable">
+        <table class="table table-striped">
+            <thead>
             <tr>
-                <td>{{ sortie.nom }}</td>
-                <td>{{ sortie.dateHeureDebut | date('d/m/y') }}</td>
-                <td>{{ sortie.dateLimiteInscription | date('d/m/y') }}</td>
-                <td class="text-center">{{ sortie.inscriptions | length }} /
-                    {{ sortie.nbInscriptionMax }}
-                </td>
-                <td>{{ sortie.etat.libelle }}</td>
-
-                <td></td>
-                <td>
-                    <a href="{{ path('profile', {pseudo: sortie.organisateur.pseudo}) }}">{{ sortie.organisateur.prenom }}
-                        {{ sortie.organisateur.nom | slice(0,1) }}.</a>
-                </td>
+                <th scope="col">Nom de la sortie</th>
+                <th scope="col">Date de la sortie</th>
+                <th scope="col">Clôture</th>
+                <th scope="col">Inscrits/<br>places</th>
+                <th scope="col">Etat</th>
+                <th scope="col">Inscrit</th>
+                <th scope="col">Organisateur</th>
+                <th scope="col">Actions</th>
             </tr>
-        {% endfor %}
-    </table>
-</div>
+            </thead>
+            {% for sortie in sorties %}
+                <tr>
+                    <td><a href="{{ path('sortie_detail',
+                            {id: sortie.id}) }}">
+                            {{ sortie.nom }}
+                        </a>
+                    </td>
+                    <td>{{ sortie.dateHeureDebut | date('d/m/y') }}</td>
+                    <td>{{ sortie.dateLimiteInscription | date('d/m/y') }}</td>
+                    <td class="text-center">{{ sortie.inscriptions | length }} /
+                        {{ sortie.nbInscriptionMax }}
+                    </td>
+                    <td>{{ sortie.etat.libelle }}</td>
+
+                    <td></td>
+                    <td>
+                        <a href="{{ path('profile', {pseudo: sortie.organisateur.pseudo}) }}">{{ sortie.organisateur.prenom }}
+                            {{ sortie.organisateur.nom | slice(0,1) }}.</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 
 
 {% endblock %}
