--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -58,7 +58,7 @@
         </thead>
         {% for sortie in sorties %}
             <tr>
-                <td><a href="{{ path('sortie_detail', {id: sortie.organisateur.id}) }}">{{ sortie.nom }}</a></td>
+                <td><a href="{{ path('sortie_detail', {id: sortie.id}) }}">{{ sortie.nom }}</a></td>
                 <td>{{ sortie.dateHeureDebut | date('d/m/y') }}</td>
                 <td>{{ sortie.dateLimiteInscription | date('d/m/y') }}</td>
                 <td class="text-center">{{ sortie.inscriptions | length }} /
