--- a/templates/User/register.html.twig
+++ b/templates/User/register.html.twig
@@ -44,8 +44,15 @@
                     {{ form_widget(userForm.campus) }}
                     {{ form_errors(userForm.campus) }}
             </div>
+
+            <div>
+                {{ form_label(userForm.administrateur) }}
+                {{ form_widget(userForm.administrateur) }}
+                {{ form_errors(userForm.administrateur) }}
+            </div>
+
             {{ form_row(userForm._token) }}
-            <button type="submit">S'inscrire</button>
+            <button class="btn btn-primary" type="submit">Inscrire un nouvel utilisateur</button>
         {{ form_end(userForm, {'render_rest': false}) }}
 
     </div>
