--- a/templates/User/profil.html.twig
+++ b/templates/User/profil.html.twig
@@ -3,42 +3,29 @@
 {% block title %}Mon profil{% endblock %}
 
 {% block main %}
-
-    <div class="col-12 row">
-        <div class="col-2 align-self-center">
-            <img src="{{ asset('uploads/photo_profil/' ~ user.getUrlPhoto()) }}" width="150">
+    <div class="jumbotron col-lg-6 offset-lg-3 col-md-8 offset-md-2
+    col-sm-10 offset-sm-1">
+        <h1 class="card-title text-center">{{ user.pseudo }}</h1>
+        <div class="card-img col-12 text-center">
+            <img src="{{ asset('uploads/photo_profil/' ~ user.getUrlPhoto()) }}"
+                 width="150">
         </div>
-        <div class="col-10">
-            <div>
-                {{ user.pseudo }}
-            </div>
+        <div class="card-text col-12 text-center">
 
-            <div>
-                Prénom  : {{ user.prenom }}
-            </div>
-
-            <div>
-                Nom  : {{ user.nom }}
-            </div>
-
-            <div>
-                Téléphone  : {% if user.telephone %} {{ user.telephone}} {% else %} Pas de numéro renseigné {% endif %}
-            </div>
-
-            <div>
-                Email  : {{ user.mail }}
-            </div>
-
-            <div>
-                Campus  : {{ user.campus }}
-            </div>
-
-            <div>
-                <a class="btn btn-primary" href="{{ url('home') }}">Retour</a>
-            </div>
+            <p>Prénom : {{ user.prenom }}</p>
+            <p>Nom : {{ user.nom }}</p>
+        </div>
+        <div class="card-text col-12 text-center">
+            {% if user.telephone %}
+                <p>Téléphone : {{ user.telephone }}</p>
+            {% else %}
+                <p>Pas de numéro renseigné</p>
+            {% endif %}
+            <p>Email : {{ user.mail }}</p>
+            <p>Campus : {{ user.campus }}</p>
+        </div>
+        <div class="text-center">
+            <a class="btn btn-primary" href="{{ url('home') }}">Retour</a>
         </div>
     </div>
-
-
-
 {% endblock %}
