--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -7,17 +7,19 @@
     </button>
 
     <a>Bienvenue {{ app.user.prenom }}<br>
-        Nous sommes le {{ ("now" | date("d/m/y"))}}</a>
+        Nous sommes le {{ ("now" | date("d/m/y")) }}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto" style="padding-left: 50px" >
-            <li class="nav-item">
-                <a class="nav-link" href="#">Villes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Campus</a>
-            </li>
+        <ul class="navbar-nav mr-auto">
+            {% if is_granted('ROLE_USER') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Villes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Campus</a>
+                </li>
+            {% endif %}
             <li>
-                <a class="nav-link" href="{{path('home')}}">Accueil</a>
+                <a class="nav-link" href="{{ path('home') }}">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link"
