Affichage menu et logo

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -12,9 +12,8 @@
 </head>
 <body>
 <header>
-
-    <div id="header-title">
-        <img alt="logo" id="logo" src={{ asset("img/sortir.png") }}>
+    <div id="header-title" class="col-12 flex-wrap flex-row">
+        <img class="d-none d-sm-block" alt="logo" id="logo" src={{ asset("img/sortir.png") }}>
         <h1>Sortir.com</h1>
     </div>
 </header>
