--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,11 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-
+<nav class="navbar navbar-expand-lg navbar-light
+col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-10 offset-sm-1">
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-center"></span>
     </button>
-
     <a>Bienvenue {{ app.user.prenom }}<br>
         Nous sommes le {{ ("now" | date("d/m/y")) }}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
