Y a des trucs de rajouté, en vue admin en tout cas, désactiver, supprimer un user + annuler sortie.

--- a/templates/User/import.html.twig
+++ b/templates/User/import.html.twig
@@ -15,4 +15,7 @@
     <button class="btn btn-primary" type="submit">Enregistrer le fichier</button>
     {{ form_end(fichierFrom)}}
 
+    <br>
+    <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+
 {% endblock %}
